--- a/Index.html
+++ b/Index.html
@@ -14,7 +14,7 @@
 
     <!--Menu Superior-->
     <div id="Menu_Superior">
-        <a href="https://learning.dnc.group/course/desenvolvedor-front-end-v2/player/122958/content/260856">
+        <a href="https://www.escoladnc.com.br">
             <img src="/Imagens/logo.svg" id="logo" alt="ERROR">
         </a>
         <h1 id="Titulo_Menu_Superior">Dê os primeiros passos da <br>
@@ -35,7 +35,7 @@
 
     <!--Seção do Video-->
     <div id="Secao_Video">
-        <iframe id="Video" width="502" height="283" src="https://www.youtube.com/embed/Czm4ydtGvN0" title="Consegui Resolver o Pior Desafio do Curso de Programação de Harvard  | #9" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        <iframe id="Video" width="502" height="283" src="https://www.youtube.com/embed/rdINp5rZgxU" title="Conheça a DNC | Web Série - Episódio #01" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         <div id="Secao_Video_Informacoes">
         <h1 id="Titulo_Video">Aprenda com especialistas e <br> <br>
             comece seu primeiro projeto</h1>
